--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,21 @@
 /* CSS declarations go here */
+body{
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-family: sans-serif;
+}
+
+.navbar {
+    background-color: violet;
+    padding: 20px;
+}
+
+.navbar-item {
+    font-size: 20px;
+        margin: auto 25px;
+}
+
+.navbar-account {
+    float: right;
+}
