--- a/client/main.css
+++ b/client/main.css
@@ -4,6 +4,12 @@ body{
   padding: 0;
   font-size: 14px;
   font-family: sans-serif;
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(red, yellow); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(red, yellow); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(red, yellow); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(red, yellow); /* Standard syntax */
+  background-repeat: no-repeat;
 }
 
 .navbar {
@@ -18,4 +24,15 @@ body{
 
 .navbar-account {
     float: right;
+}
+
+.welcome-block {
+    /* padding: 17px; */
+    position: relative;
+    text-align: center;
+    margin-top: 9%;
+    display: block;
+    font-size: 20px;
+
+    /* margin: auto; */
 }
